--- a/src/Components/Posts/Post/Post.module.sass
+++ b/src/Components/Posts/Post/Post.module.sass
@@ -12,9 +12,17 @@
       flex-flow: column nowrap
       align-items: center
       font-family: 'Oswald', 'sans-serif'
+      .headerTop
+        width: 100%
+        display: flex
+        justify-content: space-between
+        align-items: center
       .userName
         align-self: start
         opacity: 0.6
+      .buttonContainer
+        display: flex
+        align-self: end
       .title
         font-weight: bolder
         font-size: 28px
