--- a/src/Components/Albums/Album/Album.module.sass
+++ b/src/Components/Albums/Album/Album.module.sass
@@ -11,3 +11,7 @@
   display: flex
   flex-flow: row nowrap
   justify-content: end
+.link
+  text-decoration: none
+  &:hover
+    text-decoration: underline
